--- a/coding/logsign.html
+++ b/coding/logsign.html
@@ -103,7 +103,7 @@
                         <h3>회원가입</h3>
                         <div class="mail">
                             <input type="mail" name="메일" placeholder="이메일 입력">
-                            <div class="btn">이메일 중복검사</div>
+                            <div class="btns">이메일 중복검사</div>
                             <label>Mail</label>
                         </div>
                         <div class="uid">
@@ -120,6 +120,7 @@
                         </div>
                         <div class="name">
                             <input type="text" name="닉네임" placeholder="닉네임 입력">
+                            <div class="btns">닉네임 중복검사</div>
                             <label>Nickname</label>
                         </div>
                         <div class="submit">
