--- a/coding/logsign.html
+++ b/coding/logsign.html
@@ -202,7 +202,7 @@
         $(document).ready(function () {
             $(".logsign .sign-btn button").click(function () {
                 $('.logsign .wrapper').addClass('move');
-                $('.main_logsign').css('background', '#e0b722');
+                $('.main_logsign').css('background', '#9BABB8');
                 $(".logsign .log-btn button").removeClass('active');
                 $(this).addClass('active');
 
