--- a/coding/logsign.html
+++ b/coding/logsign.html
@@ -90,11 +90,11 @@
             <div class="logsign">
                 <div class="log-btn splits">
                     <p>로그인을 해주세요!</p>
-                    <button>로그인하기</button>
+                    <button type="submit">로그인하기</button>
                 </div>
                 <div class="sign-btn splits">
                     <p>회원가입을 해주세요!</p>
-                    <button>가입하기</button>
+                    <button type="submit">가입하기</button>
                 </div>
                 <div class="wrapper">
                     <form id="login" tabindex="500">
@@ -108,7 +108,7 @@
                             <label>Password</label>
                         </div>
                         <div class="submit">
-                            <button class="dark">로그인</button>
+                            <button class="dark" type="submit">로그인</button>
                         </div>
                         <div class="checks">
                             <ul>
@@ -141,7 +141,7 @@
                             <label>Nickname</label>
                         </div>
                         <div class="submit">
-                            <button class="dark">가입완료</button>
+                            <button class="dark" type="submit">가입완료</button>
                         </div>
                     </form>
                 </div>
