--- a/coding/main.html
+++ b/coding/main.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="마라톤, 러닝, 대회일정, 러닝크루, 훈련팁, 42km, 랭킹, 풀코스, 하프코스, 10km">
 
     <meta property="og:title" content="러닝 & 마라톤의 모든 것">
-    <meta property="og:url" content="#">
+    <meta property="og:url" content="http://dlswl1993.dothome.co.kr/">
     <meta property="og:image" content="#">
     <meta property="og:description" content="WayRunMeaning에서 다양한 마라톤 정보와 일정을 확인하세요!" />
 
