--- a/coding/checkIDPSW.html
+++ b/coding/checkIDPSW.html
@@ -27,6 +27,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <style type="text/css">
+        .site-link {
+            padding: 5px 15px;
+            position: fixed;
+            z-index: 99999;
+            background: #fff;
+            box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+            right: 30px;
+            bottom: 30px;
+            border-radius: 10px;
+        }
+
+        .site-link img {
+            width: 30px;
+            height: 30px;
+        }
+    </style>
     <title>WayRunMeaning : 러닝 & 마라톤</title>
 </head>
 
@@ -74,12 +91,12 @@
                 <div class="rgstr1-btn splits">
                     <p>아이디가<br>
                         기억나지 않으시나요?</p>
-                    <button>Register</button>
+                    <button type="submit">Register</button>
                 </div>
                 <div class="psw-btn splits">
                     <p>비밀번호가<br>
                         기억나지 않으시나요?</p>
-                    <button>Register</button>
+                    <button type="submit">Register</button>
                 </div>
                 <div class="wrapper">
                     <form id="register1" tabindex="500">
@@ -97,7 +114,7 @@
                             <label>Password</label>
                         </div>
                         <div class="submit">
-                            <button class="dark">확인</button>
+                            <button class="dark" type="submit">확인</button>
                         </div>
                         <div class="checks">
                             <ul>
@@ -116,31 +133,12 @@
                             <label>User Name</label>
                         </div>
                         <div class="submit">
-                            <button class="dark">확인</button>
+                            <button class="dark" type="submit">확인</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-
-
-        <style type="text/css">
-            .site-link {
-                padding: 5px 15px;
-                position: fixed;
-                z-index: 99999;
-                background: #fff;
-                box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
-                right: 30px;
-                bottom: 30px;
-                border-radius: 10px;
-            }
-
-            .site-link img {
-                width: 30px;
-                height: 30px;
-            }
-        </style>
 
         <footer id="footer" role="contentinfo">
             <hr>
