--- a/coding/main.html
+++ b/coding/main.html
@@ -245,7 +245,7 @@
 
                 <div class="main__info">
                     <div class="container">
-                        <h3>Marathon information</h3>
+                        <h3>Marathon Information</h3>
                         <p>마라톤 일정</p>
                         <div class="main__post">
                             <div class="post1">
@@ -315,7 +315,7 @@
 
                 <div class="main__rank">
                     <div class="container">
-                        <h4>Marathon rankings</h4>
+                        <h4>Marathon Rankings</h4>
                         <p>마라톤 순위</p>
                         <div class="main__rank__post">
                             <div class="rank1">
@@ -353,7 +353,7 @@
                 <div class="main__crew">
                     <div class="container">
                         <div class="main__crew__rank">
-                            <h5>Crew ranking</h5>
+                            <h5>Crew Ranking</h5>
                             <span>크루 랭킹</span>
                         </div>
                         <div class="crew__rank">
@@ -468,7 +468,7 @@
                 </div>
                 <div class="main__goal">
                     <div class="container">
-                        <h6>GOAL</h6>
+                        <h6>Goal</h6>
                         <p>목표</p>
                         <div class="goal__box">
                             <a href="">
