--- a/coding/logsign.html
+++ b/coding/logsign.html
@@ -129,10 +129,11 @@
                         </div>
                         <div class="passwd">
                             <input type="password" name="비밀번호" placeholder="비밀번호 입력">
+                            <div class="btns">비밀번호 중복검사</div>
                             <label>Password</label>
                         </div>
                         <div class="passwdC">
-                            <input type="password" name="비밀번호 확인" placeholder="비밀번호 확인">
+                            <input type="password" name="비밀번호 확인" placeholder="비밀번호를 다시 적어주세요">
                             <label>Password</label>
                         </div>
                         <div class="name">
