--- a/WRM/coding/main/main.html
+++ b/WRM/coding/main/main.html
@@ -36,21 +36,71 @@
         <!-- //header -->
 
         <section id="section">
-            <article class="title"></article>
-            <article class="banner"></article>
+            <header class="title">
+                <h1>way run <br>
+                    Menaing
+                </h1>
+            </header>
         </section>
         <!-- //section -->
 
-        <main id="main">
-
+        <main id="main" role="main">
+            <div class="main__banner">
+                <div class="container">
+                    <img src="../assets/img/character/character-1.svg" alt="character">
+                    <a href="#">웨이런미닝 모토 바로가기</a>
+                </div>
+            </div>
         </main>
         <!-- //main -->
 
-        <footer id="footer">
+        <footer id="footer" role="contentinfo">
+            <hr>
+            <div class="container">
+                <div class="footer__lnner">
+                    <div class="left">
+                        <ul>
+                            <li><a href="#">멤버가입</a></li>
+                            <li><a href="#">고객센터</a>
+                                <ul>
+                                    <li><a href="#">공지사항</a></li>
+                                    <li><a href="#">문의하기</a></li>
+                                </ul>
+                            </li>
+                        </ul>
 
+                    </div>
+                    <div class="right">
+                        <div class="sns">
+                            <ul>
+                                <li><a href="#"><span class="blind">페이스북</span></a></li>
+                                <li><a href="#"><span class="blind">트위터</span></a></li>
+                                <li><a href="#"><span class="blind">인스타그램</span></a></li>
+                                <li><a href="#"><span class="blind">유튜브</span></a></li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer__bot">
+                    <div class="left_bot">
+                        <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
+                    </div>
+                    <div class="right_bot">
+                        <ul>
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">위치 기반 서비스 약관</a></li>
+                            <li><a href="#">개인정보처리방침</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <hr>
+                <p class="maile">nicejpm@naver.com</p>
+            </div>
         </footer>
         <!-- //footer -->
-
     </div>
     <!-- //wrap -->
 </body>
