--- a/coding/main.html
+++ b/coding/main.html
@@ -222,6 +222,7 @@
                 </div>
                 <!-- //main__inner -->
 
+                <!-- 문의하기 -->
                 <div class="main__sub">
                     <div class="container">
                         <div class="cont1">
@@ -237,11 +238,12 @@
                                 dedicated to sharing our love for long-distance racing. <br>
                                 Whether you're a seasoned <br>
                                 marathoner or just starting out, join us for <br>
-                                support, advice, and camaraderie as we strive towards our goals together. </p>
+                                support, advice, and camaraderie as we strive towards our goals together.
+                            </p>
                         </div>
                     </div>
                 </div>
-                <!-- //main__sub -->
+                <!-- 문의하기 END -->
 
                 <div class="main__info">
                     <div class="container">
