--- a/coding/login.html
+++ b/coding/login.html
@@ -79,166 +79,27 @@
             <div class="container">
                 <div class="main__login">
                     <h1 class="title01">어서와 마라톤 커뮤니티는 처음이지?</h1>
-                    <img src="../assets/img/" alt="캐릭터1">
-                    <p class="title02">
-                        MARATHON<br />
-                        COMMUNITY
-                    </p>
-                </div>
-                <div class="comm__link">
-                    <ul>
-                        <a href="#" class="links 01">
-                            <li>
-                                <span>1. 공지사항</span>
-                                <img src="../assets/img/ch01.png" alt="캐릭터1">
-                            </li>
-                        </a>
-                        <a href="#" class="links 02">
-                            <li>
-                                <span>2. 자유게시판</span>
-                                <img src="../assets/img/ch02.png" alt="캐릭터2">
-                            </li>
-                        </a>
-                        <a href="#" class="links 03">
-                            <li>
-                                <span>3. 크루모집</span>
-                                <img src="../assets/img/ch03.png" alt="캐릭터3">
-                            </li>
-                        </a>
-                        <a href="#" class="links 04">
-                            <li>
-                                <span>4. 마라톤후기</span>
-                                <img src="../assets/img/ch04.png" alt="캐릭터4">
-                            </li>
-                        </a>
-                    </ul>
-                </div>
-                <div class="comm__table">
-                    <section class="table__top">
-                        <div class="left">
-                            * 총 <em>10</em>건의 게시물이 등록되었습니다.
-                        </div>
-                        <div class="right">
-                            <form action="boardSearch.php" name="table__top" method="get">
-                                <fieldset>
-                                    <legend class="blind">게시판 검색 영역</legend>
-                                    <input type="text" name="searchKeyword" placeholder="검색어를 입력해주세요.">
-                                    <select name="searchOption" id="searchOption">
-                                        <option value="title">제목</option>
-                                        <option value="content">내용</option>
-                                        <option value="name">등록자</option>
-                                    </select>
-                                    <button type="submit" class="btns1">검색</button>
-                                    <button type="submit" class="btns2">글쓰기</button>
-                                </fieldset>
-                            </form>
-                        </div>
-                    </section>
-                    <section class="table__board">
-                        <table>
-                            <colgroup>
-                                <col />
-                                <col />
-                                <col />
-                                <col />
-                                <col />
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <th>번호</th>
-                                    <th>제목</th>
-                                    <th>등록자</th>
-                                    <th>등록일</th>
-                                    <th>조회수</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>10</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>100</td>
-                                </tr>
-                                <tr>
-                                    <td>9</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>33</td>
-                                </tr>
-                                <tr>
-                                    <td>8</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>16</td>
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>785</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>1552</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>77</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>365</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>74</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>425</td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>아직 게시판 제목이 없습니다.</td>
-                                    <td>주인장</td>
-                                    <td>2024.05.02</td>
-                                    <td>535</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </section>
-                    <section class="table__bottom">
-                        <ul>
-                            <li class="first"><a href="#">처음</a></li>
-                            <li class="prev"><a href="#">이전</a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li class="next"><a href="#">다음</a></li>
-                            <li class="last"><a href="#">마지막</a></li>
-                        </ul>
-                    </section>
+                    <img src="./assets/img/login.png" alt="캐릭터1">
+                    <div class="login__wrap">
+                        <form id="login">
+                            <div class="mail">
+                                <input type="mail" name="메일" placeholder="이메일 주소">
+                                <label></label>
+                            </div>
+                            <div class="passwd">
+                                <input type="password" name="비밀번호" placeholder="비밀번호">
+                                <label></label>
+                            </div>
+                            <div class="submit">
+                                <button class="dark" type="submit">로그인</button>
+                            </div>
+                            <div class="checks">
+                                <ul>
+                                    <li><a href="checkIDPSW.html" class="line-under">아이디, 비밀번호를 잊어버리셨나요?</a></li>
+                                </ul>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
 
