게시판 검색빼고는 얼추 끝남

--- a/coding/comm_notice.html
+++ b/coding/comm_notice.html
@@ -78,40 +78,42 @@
         <main id="main" role="main">
             <div class="container">
                 <div class="main__community">
-                    <h1 class="title01">마라톤 커뮤니티</h1>
                     <p class="title02">
-                        MARATHON<br />
-                        COMMUNITY
+                        COMMU<br />
+                        RUNNING
                     </p>
+                    <h1 class="title01">마라톤 커뮤니티</h1>
                 </div>
                 <div class="comm__link">
                     <ul>
-                        <a href="#" class="links 01">
+                        <a href="../community/comm_notice.php" class="links 01">
                             <li>
-                                <span>1. 공지사항</span>
+                                <span>자유게시판</span>
                                 <img src="../assets/img/ch01.png" alt="캐릭터1">
                             </li>
                         </a>
                         <a href="#" class="links 02">
                             <li>
-                                <span>2. 자유게시판</span>
+                                <span>크루모집</span>
                                 <img src="../assets/img/ch02.png" alt="캐릭터2">
                             </li>
                         </a>
                         <a href="#" class="links 03">
                             <li>
-                                <span>3. 크루모집</span>
+                                <span>번개모임</span>
                                 <img src="../assets/img/ch03.png" alt="캐릭터3">
                             </li>
                         </a>
                         <a href="#" class="links 04">
                             <li>
-                                <span>4. 마라톤후기</span>
+                                <span>질문있어요</span>
                                 <img src="../assets/img/ch04.png" alt="캐릭터4">
                             </li>
                         </a>
                     </ul>
                 </div>
+                <!-- //comm__link -->
+
                 <div class="comm__table">
                     <section class="table__top">
                         <div class="left">
@@ -240,7 +242,6 @@
                     </section>
                 </div>
             </div>
-
         </main>
         <!--//main -->
 
