--- a/coding/comm_notice.html
+++ b/coding/comm_notice.html
@@ -19,7 +19,7 @@
     <meta name="twitter:description" content="WayRunMeaning에서 다양한 마라톤 정보와 일정을 확인하세요!" />
 
     <link href="assets/ico/favicon.png" rel="favicon icon">
-    <link rel="stylesheet" href="../coding/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>WayRunMeaning : 러닝 & 마라톤</title>
 </head>
@@ -78,42 +78,40 @@
         <main id="main" role="main">
             <div class="container">
                 <div class="main__community">
-                    <p class="title02">
-                        COMMU<br />
-                        RUNNING
-                    </p>
                     <h1 class="title01">마라톤 커뮤니티</h1>
+                    <p class="title02">
+                        MARATHON<br />
+                        COMMUNITY
+                    </p>
                 </div>
                 <div class="comm__link">
                     <ul>
-                        <a href="../community/comm_notice.php" class="links 01">
+                        <a href="#" class="links 01">
                             <li>
-                                <span>자유게시판</span>
+                                <span>1. 공지사항</span>
                                 <img src="../assets/img/ch01.png" alt="캐릭터1">
                             </li>
                         </a>
                         <a href="#" class="links 02">
                             <li>
-                                <span>크루모집</span>
+                                <span>2. 자유게시판</span>
                                 <img src="../assets/img/ch02.png" alt="캐릭터2">
                             </li>
                         </a>
                         <a href="#" class="links 03">
                             <li>
-                                <span>번개모임</span>
+                                <span>3. 크루모집</span>
                                 <img src="../assets/img/ch03.png" alt="캐릭터3">
                             </li>
                         </a>
                         <a href="#" class="links 04">
                             <li>
-                                <span>질문있어요</span>
+                                <span>4. 마라톤후기</span>
                                 <img src="../assets/img/ch04.png" alt="캐릭터4">
                             </li>
                         </a>
                     </ul>
                 </div>
-                <!-- //comm__link -->
-
                 <div class="comm__table">
                     <section class="table__top">
                         <div class="left">
@@ -242,6 +240,7 @@
                     </section>
                 </div>
             </div>
+
         </main>
         <!--//main -->
 
