--- a/coding/login.html
+++ b/coding/login.html
@@ -76,7 +76,7 @@
         <!-- //header -->
 
         <main id="main" role="main">
-            <div class="container">
+            <div class="login__container">
                 <div class="main__login">
                     <h1 class="title01">어서와 마라톤 커뮤니티는 처음이지?</h1>
                     <img src="./assets/img/login.png" alt="캐릭터1">
