--- a/coding/comm_notice.html
+++ b/coding/comm_notice.html
@@ -89,25 +89,25 @@
                         <a href="../community/comm_notice.php" class="links 01">
                             <li>
                                 <span>자유게시판</span>
-                                <img src="../assets/img/ch01.png" alt="캐릭터1">
+                                <img src="./assets/img/commC1.svg" alt="캐릭터1">
                             </li>
                         </a>
                         <a href="#" class="links 02">
                             <li>
                                 <span>크루모집</span>
-                                <img src="../assets/img/ch02.png" alt="캐릭터2">
+                                <img src="./assets/img/commC2.svg" alt="캐릭터2" class="comm2">
                             </li>
                         </a>
                         <a href="#" class="links 03">
                             <li>
                                 <span>번개모임</span>
-                                <img src="../assets/img/ch03.png" alt="캐릭터3">
+                                <img src="./assets/img/commC3.svg" alt="캐릭터3">
                             </li>
                         </a>
                         <a href="#" class="links 04">
                             <li>
                                 <span>질문있어요</span>
-                                <img src="../assets/img/ch04.png" alt="캐릭터4">
+                                <img src="./assets/img/commC4.svg" alt="캐릭터4" class="comm4">
                             </li>
                         </a>
                     </ul>
