로그인 페이지 제작

--- a/coding/login_PWfind.html
+++ b/coding/login_PWfind.html
@@ -66,7 +66,7 @@
                     </nav>
                     <div class="member">
                         <ul>
-                            <li><a href="logsign.html">로그인</a></li>
+                            <li><a href="login.html">로그인</a></li>
                         </ul>
                     </div>
                 </div>
@@ -77,25 +77,27 @@
 
         <main id="main" role="main">
             <div class="login__container">
-                <div class="main__login">
-                    <h1 class="title01">어서와 마라톤 커뮤니티는 처음이지?</h1>
-                    <img src="./assets/img/login.png" alt="캐릭터1">
+                <div class="main__PWfind">
+                    <h2 class="title02">비밀번호 찾기</h2>
+                    <h1 class="title01">비밀번호가 기억나지 않는다고? 걱정하지마</h1>
+                    <img src="./assets/img/ login_id_find.svg" alt="캐릭터2">
                     <div class="login__wrap">
-                        <form id="login">
+                        <form id="PWfind">
                             <div class="mail">
-                                <input type="mail" name="메일" placeholder="이메일 주소">
+                                <input type="mail" name="메일" placeholder="이메일 입력">
                                 <label></label>
+                                <button type="submit">전송</button>
                             </div>
-                            <div class="passwd">
-                                <input type="password" name="비밀번호" placeholder="비밀번호">
+                            <div class="password">
+                                <input type="password" name="비밀번호" placeholder="임시비밀번호 입력">
                                 <label></label>
                             </div>
                             <div class="submit">
-                                <button class="dark" type="submit">로그인</button>
+                                <button class="dark" type="submit">확인</button>
                             </div>
                             <div class="checks">
                                 <ul>
-                                    <li><a href="checkIDPSW.html" class="line-under">아이디, 비밀번호를 잊어버리셨나요?</a></li>
+                                    <li><a href="checkIDPSW.html" class="line-under">혹시 아이디를 잊으셨나요?</a></li>
                                 </ul>
                             </div>
                         </form>
