--- a/bin/line.html
+++ b/bin/line.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>text scroll animation</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 
 <body>
