--- a/coding/comm_notice.html
+++ b/coding/comm_notice.html
@@ -89,7 +89,7 @@
                         <a href="../community/comm_notice.php" class="links 01">
                             <li>
                                 <span>자유게시판</span>
-                                <img src="./assets/img/commC1.svg" alt="캐릭터1">
+                                <img src="./assets/img/commC1.svg" alt="캐릭터1" class="comm1">
                             </li>
                         </a>
                         <a href="#" class="links 02">
@@ -101,7 +101,7 @@
                         <a href="#" class="links 03">
                             <li>
                                 <span>번개모임</span>
-                                <img src="./assets/img/commC3.svg" alt="캐릭터3">
+                                <img src="./assets/img/commC3.svg" alt="캐릭터3" class="comm3">
                             </li>
                         </a>
                         <a href="#" class="links 04">
