--- a/WRM/coding/main/main.html
+++ b/WRM/coding/main/main.html
@@ -37,7 +37,7 @@
 
         <section id="section">
             <header class="title">
-                <h1>way run <br>
+                <h1 class="split">way run <br>
                     Menaing
                 </h1>
             </header>
@@ -607,9 +607,13 @@
         <!-- //footer -->
     </div>
     <!-- //wrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
     <script src="../assets/js/movetext.js"></script>
     <script src="../assets/js/posthover.js"></script>
-
+    <script src="../assets/js/gsap.js"></script>
 </body>
 
 </html>
