--- a/html/coding/aboutpage/about.html
+++ b/html/coding/aboutpage/about.html
@@ -60,29 +60,32 @@
                     <div class="aboutT__img">
                         <img src="../assets/img/about/mainabout.svg" alt="이미지">
                     </div>
-                    <div class="about__banner">
-                        <div class="about__banner1-1">
-                            <p>Our Services</p>
-                            <span>
-                                마이페이지를 이용한 일정관리,<br>
-                                양한 대회 일정을 한눈에 파악하고,<br>
-                                훈련 커뮤니티로 실력을 향상 시켜보세요!!
-                            </span>
-                        </div>
-                        <!-- <div class="about__banner1-2">
-                            <img src="../assets/img/about/banner1-2.svg" alt="로고1">
-                            <span>
-                                You "Welcome to our marathon community!<br>
-                                We're a passionate group of runners<br>
-                                dedicated to sharing our love for long-distance racing.<br>
-                                Whether you're a seasoned marathoner<br>
-                                or just starting out, join us for support, advice, and camaraderie<br>
-                                as we strive towards our goals together.
-                            </span>
-                        </div> -->
-                    </div>
                 </div>
             </div>
+            <!-- //about__title -->
+
+            <div class="about__banner1">
+                <div class="about__banner1-1">
+                    <p>Our Services</p>
+                    <span>
+                        마이페이지를 이용한 일정관리,<br>
+                        양한 대회 일정을 한눈에 파악하고,<br>
+                        훈련 커뮤니티로 실력을 향상 시켜보세요!!
+                    </span>
+                </div>
+                <!-- <div class="about__banner1-2">
+                    <img src="../assets/img/about/banner1-2.svg" alt="로고1">
+                    <span>
+                        You "Welcome to our marathon community!<br>
+                        We're a passionate group of runners<br>
+                        dedicated to sharing our love for long-distance racing.<br>
+                        Whether you're a seasoned marathoner<br>
+                        or just starting out, join us for support, advice, and camaraderie<br>
+                        as we strive towards our goals together.
+                    </span>
+                </div> -->
+            </div>
+            <!-- //about__banner1 -->
         </main>
         <!-- //main -->
 
