마이페이지

--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -60,19 +60,52 @@
                 <!-- //mypage__title -->
 
                 <div class="mypage__information">
-                    <div class="mypage__information__aside">
-                        <span class="mypage__title02">내 정보</span>
-                        <div class="mypage__nickname">
-                            <img src="../assets/img/mypage/my_info_1.svg" alt="">
-                            <div class="my__name">
-                                <span class="my__nik">닉네임님</span>
-                                <span class="my__info"><a href="#">정보 수정하기</a></span>
+                    <div class="mypage__text03">내 정보</div>
+                    <div class="mypage__information__wrap">
+                        <div class="mypage__information__aside">
+                            <div class="mypage__nickname">
+                                <img src="../assets/img/mypage/my_info_1.svg" alt="프로필이미지">
+                                <div class="my__name">
+                                    <span class="my__nik">닉네임님</span>
+                                    <span class="my__info"><a href="#">정보 수정하기</a></span>
+                                </div>
+                                <span class="my__email">dfddfs@naver.com</span>
+                                <a href="#">로그아웃</a>
                             </div>
-                            <span class="my__email">dfddfs@naver.com</span>
-                            <a href="#">로그아웃</a>
+                        </div>
+                        <div class="mypage__information__contents">
+                            <div class="mypage__contents1">
+                                <ul>
+                                    <li><a href="#">뱃지 &미션
+                                            <img src="../assets/img/mypage/my_info_2.svg" alt="뱃지 & 미션">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">마이 피드
+                                            <img src="../assets/img/mypage/my_info_3.svg" alt="뱃지 & 미션">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">찜한 마라톤
+                                            <img src="../assets/img/mypage/my_info_heart.svg" alt="뱃지 & 미션">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="mypage__contents2">
+                                <div class="contents2__wrap">
+                                    <span class="mp__title">내 러닝 레벨</span>
+                                    <span class="mp__text">2</span>
+
+                                    <span class="mp__title">우리가 함께 한지</span>
+                                    <span class="mp__text">108일</span>
+
+                                    <span class="mp__title">소속 크루</span>
+                                    <span class="mp__text">나이키런</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="mypage__information__contents"></div>
                 </div>
         </main>
         <!--//main -->
