--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -107,6 +107,21 @@
                         </div>
                     </div>
                 </div>
+                <!-- //mypage__information -->
+
+                <div class="mypage__text03">이번주 출석 체크
+                    <div class="mypage__check">
+                        <div class="check__wrap">
+                            <div class="mypage__sticker"></div>
+                            <div class="mypage__sticker"></div>
+                            <div class="mypage__sticker"></div>
+                            <div class="mypage__sticker"></div>
+                            <div class="mypage__sticker"></div>
+                            <div class="mypage__sticker"></div>
+                            <div class="mypage__sticker"></div>
+                        </div>
+                    </div>
+                </div>
         </main>
         <!--//main -->
 
