마이페이지 수정

--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -93,15 +93,17 @@
                                 </ul>
                             </div>
                             <div class="mypage__contents2">
-                                <div class="contents2__wrap">
-                                    <span class="mp__title">내 러닝 레벨</span>
-                                    <span class="mp__text">2</span>
-
-                                    <span class="mp__title">우리가 함께 한지</span>
-                                    <span class="mp__text">108일</span>
-
-                                    <span class="mp__title">소속 크루</span>
-                                    <span class="mp__text">나이키런</span>
+                                <div>
+                                    <span>내 러닝 레벨</span>
+                                    <p>2</p>
+                                </div>
+                                <div>
+                                    <span>우리가 함께한지</span>
+                                    <p>108일</p>
+                                </div>
+                                <div>
+                                    <span>소속 크루</span>
+                                    <p>나이키런</p>
                                 </div>
                             </div>
                         </div>
@@ -122,6 +124,91 @@
                         </div>
                     </div>
                 </div>
+                <!-- mypage__check -->
+
+
+                <div class="calendar__wrap">
+                    <div class="calendar">
+                        <h2 class="calendar__title">May 2024</h2>
+                        <div class="calendar-header">
+                            <span class="calendar__nav">&lt;</span>
+                            <span class="calendar__nav">&gt;</span>
+                        </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>SUN</th>
+                                    <th>MON</th>
+                                    <th>TUE</th>
+                                    <th>WED</th>
+                                    <th>THU</th>
+                                    <th>FRI</th>
+                                    <th>SAT</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>7</td>
+                                    <td>8</td>
+                                    <td>8</td>
+                                    <td>8</td>
+                                    <td>8</td>
+                                    <td>8</td>
+                                    <td>8</td>
+                                </tr>
+                                <tr>
+                                    <td>14</td>
+                                    <td>15</td>
+                                    <td>15</td>
+                                    <td>15</td>
+                                    <td>15</td>
+                                    <td>15</td>
+                                    <td>15</td>
+                                </tr>
+                                <tr>
+                                    <td>21</td>
+                                    <td>22</td>
+                                    <td>22</td>
+                                    <td>22</td>
+                                    <td>22</td>
+                                    <td>22</td>
+                                    <td>22</td>
+                                </tr>
+                                <tr>
+                                    <td>28</td>
+                                    <td>29</td>
+                                    <td>29</td>
+                                    <td>29</td>
+                                    <td>29</td>
+                                    <td>29</td>
+                                    <td>29</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="event-list">
+                        <ul>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                            <li>2024.07.12 한강 나이트 워크</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- calendar -->
+
         </main>
         <!--//main -->
 
